<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTitleHor_dialogTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gNameTaskHor_dialogTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gTypeTaskHor_dialogTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gMateForTaskHor_dialogTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDescription_dialogTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDateDeadline_dialogTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDateNow_dialogTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gButtonBottomHor_dialogTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTitleVer_dialogTask"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glButtonSaveVer_dialogTask"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTitle_dialogTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task_dialogtask"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/glTitleHor_dialogTask" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle_dialogTask" />

    <TextView
        android:id="@+id/tvNameTask_dialogTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titile_task_dialogtask"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toTopOf="@id/gNameTaskHor_dialogTask" />

    <EditText
        android:id="@+id/etAddName_dialogTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/hint_add_name_dialogtask"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/tvNameTask_dialogTask"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tvTypeTask_dialogTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/type_task_dialogtask"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/gTypeTaskHor_dialogTask" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sChooseTypeTask_dialogTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/tvTypeTask_dialogTask"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tvChooseMate_dialogTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_mate_fortask_dialogTask"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/gMateForTaskHor_dialogTask" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sChooseMateForTask_dialogTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/tvChooseMate_dialogTask"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tbDescriptionTask_dialogTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/description_dialogTask"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/glDescription_dialogTask"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/etAddDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/hint_add_description_dialogTask"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/tbDescriptionTask_dialogTask"
        app:layout_constraintWidth_percent="0.8" />



    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/etAddDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"/>
    <TextView
        android:id="@+id/tbTimeDeadline_dialogTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_time_dialogTask"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/glDateDeadline_dialogTask" />

    <TextView
        android:id="@+id/tbDateDeadline_dialogTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_date_dialogTask"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintRight_toLeftOf="@id/glButtonSaveVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/glDateDeadline_dialogTask" />



    <TextView
        android:id="@+id/tbDateNow_dialogTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/autodate_ofcreate_dialogTask"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintTop_toBottomOf="@id/glDateNow_dialogTask" />

    <Button
        android:id="@+id/btnSave_dialogTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_dialogfr"
        app:layout_constraintBottom_toBottomOf="@id/gButtonBottomHor_dialogTask"
        app:layout_constraintRight_toRightOf="@id/glButtonSaveVer_dialogTask"
        app:layout_constraintWidth_percent="0.35" />

    <Button
        android:id="@+id/btnCancel_dialogTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_dialogfr"
        app:layout_constraintBottom_toBottomOf="@id/gButtonBottomHor_dialogTask"
        app:layout_constraintLeft_toLeftOf="@id/glTitleVer_dialogTask"
        app:layout_constraintWidth_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>
